<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.bull.javamelody</groupId>
	<artifactId>javamelody-core</artifactId>
	<version>2.0.2-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>JavaMelody - Core</name>
	<description>Monitoring of JavaEE applications</description>
	<url>https://github.com/javamelody/javamelody/wiki</url>
	<inceptionYear>2008</inceptionYear>
	<licenses>
		<license>
			<name>ASL</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Emeric Vernat</name>
			<email>evernat@free.fr</email>
		</developer>
	</developers>
	<issueManagement>
		<system>GITHUB</system>
		<url>https://github.com/javamelody/javamelody/issues</url>
	</issueManagement>
	<scm>
		<connection>scm:git:git@github.com:javamelody/javamelody.git</connection>
		<developerConnection>scm:git:git@github.com:javamelody/javamelody.git</developerConnection>
		<url>https://github.com/javamelody/javamelody</url>
		<tag>HEAD</tag>
	</scm>
	<mailingLists>
		<mailingList>
			<name>User List</name>
			<subscribe>http://groups.google.com/group/javamelody/subscribe</subscribe>
			<post>javamelody@googlegroups.com</post>
			<archive>http://groups.google.com/group/javamelody</archive>
		</mailingList>
	</mailingLists>
	<organization>
		<name>Emeric Vernat</name>
	</organization>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>2.3.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
  	<dependencies>
		<!-- jrobin transitive dependency for graphs -->
		<dependency>
			<groupId>org.jrobin</groupId>
			<artifactId>jrobin</artifactId>
			<version>1.5.9</version>
		</dependency>

		<!-- following dependencies are not transitive: they are provided, test
			or optional -->
		<!-- 
		Jakarta EE 9 (Java 8 minimum) : https://projects.eclipse.org/releases/jakarta-ee-9
		Jakarta EE 9.1 : https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee9/JakartaEE9.1ReleasePlan
		Jakarta EE 10 (Java 11 minimum) : https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee10/JakartaEE10ReleasePlan
		 -->
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>5.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet.jsp</groupId>
			<artifactId>jakarta.servlet.jsp-api</artifactId>
			<version>3.0.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.mail</groupId>
			<artifactId>jakarta.mail-api</artifactId>
			<version>2.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<!-- included as a dependency in mail-api since 2.1.x (Jakarta EE 10) -->
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>jakarta.mail</artifactId>
			<version>2.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.ejb</groupId>
			<artifactId>jakarta.ejb-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.interceptor</groupId>
			<artifactId>jakarta.interceptor-api</artifactId>
			<version>2.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.persistence</groupId>
			<artifactId>jakarta.persistence-api</artifactId>
			<version>3.0.0</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>jakarta.faces</artifactId>
			<version>3.0.4</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>jakarta.el</groupId>
			<artifactId>jakarta.el-api</artifactId>
			<version>4.0.0</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.20.0</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.5</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7</version>
			<optional>true</optional>
			<exclusions>
				<exclusion>
					<artifactId>bcmail-jdk14</artifactId>
					<groupId>bouncycastle</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bcprov-jdk14</artifactId>
					<groupId>bouncycastle</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bctsp-jdk14</artifactId>
					<groupId>bouncycastle</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>2.10.9.2</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>3.10.8</version>
			<exclusions>
				<exclusion>
					<groupId>org.glassfish.jaxb</groupId>
					<artifactId>jaxb-runtime</artifactId>
				</exclusion>
			</exclusions>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>2.3.2</version>
			<optional>true</optional>
			<exclusions>
				<exclusion>
					<artifactId>c3p0</artifactId>
					<groupId>c3p0</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.20</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>dbcp</artifactId>
			<version>6.0.53</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-dbcp</artifactId>
			<version>10.1.7</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-dbcp2</artifactId>
			<version>2.9.0</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-jdbc</artifactId>
			<version>10.1.7</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.hibernate.orm</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>6.1.7.Final</version>
			<optional>true</optional>
		</dependency>
		<!-- Dépendance optionnelle spring web (qui inclus spring core, spring beans, spring aop) -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>6.0.6</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>6.0.6</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>6.0.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-mongodb</artifactId>
			<version>4.0.3</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.mongodb</groupId>
			<artifactId>mongodb-driver-sync</artifactId>
			<version>4.8.2</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-elasticsearch</artifactId>
			<version>5.0.3</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<!-- for Spring RestTemplate in unit tests -->
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.14.2</version>
			<scope>test</scope>
		</dependency>
		<!-- Dépendance optionnelle google guice (aop) -->
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>5.1.0</version>
			<optional>true</optional>
		</dependency>
		<!-- Dépendance optionnelle xwork pour interceptor struts 2 -->
		<dependency>
			<groupId>org.apache.struts.xwork</groupId>
			<artifactId>xwork-core</artifactId>
			<version>2.3.37</version>
			<optional>true</optional>
		</dependency>
		<!-- Dépendance optionnelle AWS Java SDK -->
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-cloudwatch</artifactId>
			<version>1.12.420</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
			<version>1.12.420</version>
			<optional>true</optional>
		</dependency>
		<!-- Dépendance JUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<!-- Utilisée uniquement pour l'exécution des tests unitaires -->
			<scope>test</scope>
		</dependency>
		<!-- Dépendance H2 -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.1.214</version>
			<!-- Utilisée uniquement pour l'exécution des tests unitaires -->
			<scope>test</scope>
		</dependency>
		<!-- Dépendance EasyMock -->
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>5.1.0</version>
			<!-- Utilisée uniquement pour l'exécution des tests unitaires -->
			<scope>test</scope>
		</dependency>
		<!-- Dépendance OpenJpa -->
		<dependency>
			<groupId>org.apache.openjpa</groupId>
			<artifactId>openjpa</artifactId>
			<version>3.2.2</version>
			<!-- Utilisée uniquement pour l'exécution des tests unitaires -->
			<scope>test</scope>
		</dependency>
	</dependencies>

	<distributionManagement>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>maven.jenkins-ci.org</id>
			<url>https://repo.jenkins-ci.org/releases/</url>
		</repository>
		<snapshotRepository>
			<!-- prevent accidental deployment of SNAPSHOTS to repository -->
			<id>snapshot</id>
			<url>file:.</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<!-- Configuration compilation -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>8</source>
					<target>8</target>
					<fork>true</fork>
					<!-- pour éviter warning dans Maven sur sun.nio.ch.DirectBuffer dans
						RrdNioBackend -->
					<compilerArgument>-XDignore.symbol.file=true -Xlint</compilerArgument>
					<showWarnings>true</showWarnings>
					<!-- pour éviter warning dans Maven sur sun.misc.BASE64Encoder dans
						le test unitaire TestBase64Coder -->
					<testCompilerArgument>-XDignore.symbol.file=true -Xlint</testCompilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<excludes>
						<exclude>**/Thumbs.db</exclude>
					</excludes>
					<archive>
						<manifestEntries>
							<Implementation-Title>${project.name}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
							<Implementation-Vendor>Emeric Vernat</Implementation-Vendor>
							<!-- Override user.name in Built-By -->
							<Built-By>Emeric Vernat</Built-By>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<!-- Configuration exécution des tests unitaires -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
					<!-- Ce paramètre permet aussi de tester l'appel à RuntimeMXBean.getInputArguments() -->
					<argLine>-Xmx200m -Dcatalina.home=unknown
						-Djava.io.tmpdir=${project.basedir}/target/tmp</argLine>
				</configuration>
			</plugin>

			<!-- Configuration Couverture des tests unitaires -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<!-- la version 2.6 ne donne pas la bonne couverture de code -->
				<version>2.5.2</version>
				<configuration>
					<check>
						<haltOnFailure>false</haltOnFailure>
					</check>
					<formats>
						<format>xml</format>
						<format>html</format>
					</formats>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>clean</goal>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<doclint>none</doclint>
					<offlineLinks>
						<offlineLink>
							<url>https://docs.oracle.com/javase/8/docs/api/</url>
							<location>${project.basedir}/javase/</location>
						</offlineLink>
						<offlineLink>
							<url>https://jakarta.ee/specifications/platform/9/apidocs//</url>
							<location>${project.basedir}/jakartaee/</location>
						</offlineLink>
					</offlineLinks>
					<detectJavaApiLink>false</detectJavaApiLink>
					<additionalJOptions>
						<additionalJOption>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</additionalJOption>
					</additionalJOptions>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
